# nex

./: README.md  package-lock.json  package.json
.github/workflows/: node.js.yml
github_resources/video/: README.txt
screenshots/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_integration.rs  main.rs  ollama_integration.rs
src/routes/: +page.svelte
