[package]
name = "nex"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "*", features = ["shell-open"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# Error handling
thiserror = "*"
# AI integration
genai = "*"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
